Added projects for both PC & Mobile

--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,15 @@
     <link rel="preload" href="%PUBLIC_URL%/githubIcon.webp" as="image" >
     <link rel="preload" href="%PUBLIC_URL%/flat.webp" as="image" >
     <link rel="preload" href="%PUBLIC_URL%/nedStark.webp" as="image" >
+    <link rel="preload" href="%PUBLIC_URL%/glassyProject.webp" as="image" >
+    <link rel="preload" href="%PUBLIC_URL%/geminiProject.webp" as="image" >
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Portfolio website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio</title>
   </head>
