Added lazy loading to relevant images

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preload" href="src/App.css" as="style" />
     <link rel="preload" href="%PUBLIC_URL%/facebookIcon.webp" as="image" >
     <link rel="preload" href="%PUBLIC_URL%/githubIcon.webp" as="image" >
-    <link rel="preload" href="%PUBLIC_URL%/flat.webp" as="image" >
     <link rel="preload" href="%PUBLIC_URL%/nedStark.webp" as="image" >
-    <link rel="preload" href="%PUBLIC_URL%/glassyProject.webp" as="image" >
-    <link rel="preload" href="%PUBLIC_URL%/geminiProject.webp" as="image" >
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
