Changed site icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
     <link rel="preload" href="src/App.css" as="style" />
     <link rel="preload" href="%PUBLIC_URL%/facebookIcon.webp" as="image" >
     <link rel="preload" href="%PUBLIC_URL%/githubIcon.webp" as="image" >
@@ -13,7 +13,7 @@
       name="description"
       content="Portfolio website"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Portfolio</title>
   </head>
